--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Dev With Rasel Bhai</title>
 </head>
 <body>
+    <h1>Dev With Rasel Bhai</h1>
     
+    <script src="/assets/js/js1.js"></script>
 </body>
 </html>
