Switch Case Done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Dev With Rasel Bhai</h1>
+    <p id="demo"></p>
+    <p id="student"></p>
     
     <script src="/assets/js/js1.js"></script>
 </body>
