--- a/assets/html/14.html
+++ b/assets/html/14.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/14.1.css">
-    <title>Hoqshop</title>
+    <scritp src="/assets/js/jQuery.min.js">
+        </script>
+        <link rel="stylesheet" href="/assets/css/14.1.css">
+        <title>Hoqshop</title>
 </head>
 
 <body>
@@ -22,12 +24,13 @@
                     <div class="menu">
                         <nav>
                             <ul class="menu-ul">
-                                <li><a href="#" class="li-feature">Feature</a></li>
+                                <li><a href="/assets/html/hoqshopmenu/features.html" target="_blank"
+                                        class="li-feature">Feature</a></li>
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Others</a></li>
-                                <li><a href="#">Menu</a></li>
+                                <li><a href="/assets/html/hoqshopmenu/contact.html" target="_blank">About</a></li>
+                                <li><a href="/assets/html/hoqshopmenu/contact.html" target="_blank">Contact</a></li>
+                                <li><a href="/assets/html/hoqshopmenu/contact.html" target="_blank">Others</a></li>
+                                <li><a href="/assets/html/hoqshopmenu/contact.html" target="_blank">Menu</a></li>
                             </ul>
                         </nav>
                     </div>
