--- a/assets/html/jsbasic.html
+++ b/assets/html/jsbasic.html
@@ -10,24 +10,15 @@
 <body>
 
     <h1>Basic Javascript Learning</h1>
-    <h2>Topic: Variables</h2>
+    <h2>Topic: Data Types</h2>
 
     <script>
         let myName = "Rakib";
         let myAge = 21;
         let village = "Kamalpur";
 
-        myName = "Rakibul Islam";
-        village = "Kamalpur, Mymensingh";
-        myAge = 22;
-
-        console.log(myName, village, myAge);
-
-
-
-        let pi2 = 3.1416;
-        pi2 = 2.1;
-        console.log(pi2);
+        console.log(typeof myAge);
+        console.log(typeof village);
 
 
 
