Rasel Bhai 16th Class Css Done

--- a/assets/html/hoqshopmenu/15.html
+++ b/assets/html/hoqshopmenu/15.html
@@ -120,28 +120,34 @@
                 </a>
             </div>
 
-            <div class="gallery">
-                <a href="https://files.dorik.com/635bcad9b8a74e0091632998/usa-today-new-1-1-1-1isQue.svg">
-                    <img src="https://files.dorik.com/635bcad9b8a74e0091632998/usa-today-new-1-1-1-1isQue.svg"
-                        alt="USA Today">
-                </a>
-                <a
-                    href="https://cdn.cmsfly.com/635bcad9b8a74e0091632998/wlz8cbkhsk7tdjvq27vsel7whrf0sf3rcaoslpdq-_8Kimv.png">
-                    <img src="https://cdn.cmsfly.com/635bcad9b8a74e0091632998/wlz8cbkhsk7tdjvq27vsel7whrf0sf3rcaoslpdq-_8Kimv.png"
-                        alt="CNN">
-                </a>
-                <a href="https://files.dorik.com/635bcad9b8a74e0091632998/pcmag-wggP-y.svg">
-                    <img src="https://files.dorik.com/635bcad9b8a74e0091632998/pcmag-wggP-y.svg" alt="PC Mag">
-                </a>
-                <a href="https://files.dorik.com/635bcad9b8a74e0091632998/hubspot_logo-I6cXPe.svg">
-                    <img src="https://files.dorik.com/635bcad9b8a74e0091632998/hubspot_logo-I6cXPe.svg" alt="HubSpot">
-                </a>
-                <a href="https://files.dorik.com/635bcad9b8a74e0091632998/usn-logo-large-b5R6h2.svg">
-                    <img src="https://files.dorik.com/635bcad9b8a74e0091632998/usn-logo-large-b5R6h2.svg" alt="US News">
-                </a>
+            <div class="featured-on-area">
+                <p class="featured-on-title">Featured On:</p>
+
+                <div class="gallery">
+                    <a href="https://files.dorik.com/635bcad9b8a74e0091632998/usa-today-new-1-1-1-1isQue.svg">
+                        <img src="https://files.dorik.com/635bcad9b8a74e0091632998/usa-today-new-1-1-1-1isQue.svg"
+                            alt="USA Today">
+                    </a>
+                    <a
+                        href="https://cdn.cmsfly.com/635bcad9b8a74e0091632998/wlz8cbkhsk7tdjvq27vsel7whrf0sf3rcaoslpdq-_8Kimv.png">
+                        <img src="https://cdn.cmsfly.com/635bcad9b8a74e0091632998/wlz8cbkhsk7tdjvq27vsel7whrf0sf3rcaoslpdq-_8Kimv.png"
+                            alt="CNN">
+                    </a>
+                    <a href="https://files.dorik.com/635bcad9b8a74e0091632998/pcmag-wggP-y.svg">
+                        <img src="https://files.dorik.com/635bcad9b8a74e0091632998/pcmag-wggP-y.svg" alt="PC Mag">
+                    </a>
+                    <a href="https://files.dorik.com/635bcad9b8a74e0091632998/hubspot_logo-I6cXPe.svg">
+                        <img src="https://files.dorik.com/635bcad9b8a74e0091632998/hubspot_logo-I6cXPe.svg"
+                            alt="HubSpot">
+                    </a>
+                    <a href="https://files.dorik.com/635bcad9b8a74e0091632998/usn-logo-large-b5R6h2.svg">
+                        <img src="https://files.dorik.com/635bcad9b8a74e0091632998/usn-logo-large-b5R6h2.svg"
+                            alt="US News">
+                    </a>
+                </div>
             </div>
 
-<!-- 
+            <!-- 
             <div class="featured-on">
                 <p>Featured On:</p>
                 <img src="https://files.dorik.com/635bcad9b8a74e0091632998/usa-today-new-1-1-1-1isQue.svg" alt="">
@@ -303,7 +309,7 @@
             </div>
 
             <div class="hr">
-                ______________________________________________________________________________________________________________________________________________________________________
+                ______________________________________________________________________________________________________________________
             </div>
 
             <div class="tr-bottom">
