--- a/assets/html/jsbasic.html
+++ b/assets/html/jsbasic.html
@@ -11,17 +11,36 @@
 
     <h1>Basic Javascript Learning</h1>
     <h2>Topic: Data Types</h2>
+    <h4>Primitive Data Types: String, Number, Boolean, Null</h4>
+    <h4>Non-Primitive Data Types: Array, Object</h4>
 
     <script>
-        let myName = "Rakib";
-        let myAge = 21;
-        let village = "Kamalpur";
+        //String
+        let myName = "Fahim Islam";
+        let myVillage = "Islampur";
+        console.log(typeof myName);
 
-        console.log(typeof myAge);
-        console.log(typeof village);
+        let myAge = 25;
+        let myPhoneNumber = 1234567890;
+        console.log(typeof myPhoneNumber);
 
+        let isStudent = false;
+        let isStudent2 = true;
 
+        console.log(typeof isStudent, isStudent2);
 
+        //Non-Primitive Data Types
+        let myResults = [80, 90, 55, 70];
+        console.log(typeof myResults);
+
+        let myInfo = {
+            name: "Fahim Islam",
+            age: 25,
+            village: "Islampur",
+            isStudent: true
+        }
+
+        console.log(typeof myInfo);
 
 
     </script>
