--- a/assets/html/hoqshopmenu/16.html
+++ b/assets/html/hoqshopmenu/16.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
         integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <script src="/assets/js/jQuery.min.js"></script>
+    <!--Slick Carousel CDN Link it must be under jQuery.min.js file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
         integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/assets/js/magnific.min.js"></script>
-    <link rel="stylesheet" href="/assets/css/magnific.min.css">
     <link rel="stylesheet" href="/assets/css/16.css">
     <title>16th Assignment</title>
 </head>
@@ -20,7 +21,9 @@
     <div class="container">
         <h2>Slider</h2>
         <script>
-            jQuery(document).ready();
+            jQuery(document).ready(function () {
+                $(".slider").slick();
+            });
         </script>
 
         <div class="slider">
