--- a/assets/html/hoqshopmenu/16.html
+++ b/assets/html/hoqshopmenu/16.html
@@ -26,6 +26,7 @@
                 $(".slider").slick({
                     prevArrow: '<button class="prev-button"><</button>',
                     nextArrow: '<button class="next-button">></button>',
+                    dots:true,
                 });
 
             });
