--- a/assets/html/hoqshopmenu/16.html
+++ b/assets/html/hoqshopmenu/16.html
@@ -26,7 +26,16 @@
                 $(".slider").slick({
                     prevArrow: '<button class="prev-button"><</button>',
                     nextArrow: '<button class="next-button">></button>',
-                    dots:true,
+                    dots: true,
+                });
+                $(".logo-carousel").slick({
+                    dots: true,
+                    arrows: false,
+                    autoplay: true,
+                    autoplaySpeed: 1000,
+                    fade: true,
+                    cssEase: 'linear',
+                    pauseOnHover: true,
                 });
 
             });
@@ -63,7 +72,32 @@
                     <a href="" class="btn">Learn More</a>
                 </div>
             </div>
-
+        </div>
+        <div class="logo-carousel">
+            <div class="single-logo-carousel-wrapper">
+                <div class="single-logo-carousel">
+                    <img src="https://scontent.fdac5-1.fna.fbcdn.net/v/t1.6435-9/119137358_3718642788164514_8623063901198792879_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeE4mf5qB8YB456mAvRp3oHJxCw0OTI_3O7ELDQ5Mj_c7n5axhFGlqmgFs4IPQMz7IjKYPbWuXNwmd4FGIUqCw_m&_nc_ohc=mR16guHUFn4Q7kNvgHe4FeT&_nc_oc=Adh7BwldU_g_Ta1zUrhKPywHT-VbSYvdfkMRsiXyA381LNAsxqb6CLaaJUCIhVwyYEk&_nc_zt=23&_nc_ht=scontent.fdac5-1.fna&_nc_gid=A7DNXj1x0TvXmw1SkgFuXtp&oh=00_AYDkeoGOc4ROj3Ki6K6V0AU1Gv09rTJ0KTm9TyEi-Lytng&oe=67ED4867"
+                        alt="">
+                </div>
+            </div>
+            <div class="single-logo-carousel-wrapper">
+                <div class="single-logo-carousel">
+                    <img src="https://scontent.fdac5-1.fna.fbcdn.net/v/t39.30808-6/475797839_9755602714457853_4483625152940490837_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=100&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeG323zjcZkgJ5dW04wQaasDFgJfIvIu2nUWAl8i8i7adZmrvOHn_ET2PyxFrb8Ik1qaZN9nvPI0yKei3hIr3ceA&_nc_ohc=q0Q-6kWZnRsQ7kNvgEnzTjO&_nc_oc=Adi_xFVOQ8HXbbAeXnAagAbtRjKvywmqKjrxpARU1bzO49RNT3NsAzPW-TTvFW6jPcE&_nc_zt=23&_nc_ht=scontent.fdac5-1.fna&_nc_gid=Az4hIOIMoJay_iT2Ymu6JfG&oh=00_AYB5IuAvUL8oAiiNLPre_atIXREdaXHUEL1NB5sPmdIbZQ&oe=67CBAD1F"
+                        alt="">
+                </div>
+            </div>
+            <div class="single-logo-carousel-wrapper">
+                <div class="single-logo-carousel">
+                    <img src="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/415480129_7013180772083585_1792086345972465985_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeF9TbyXQixO5vW6_ZIaxg4noBVTAvF-IVCgFVMC8X4hUG1q7Uj_MCDondeQYGC0UUjzUP9mKSA86wBO39HAytP0&_nc_ohc=Autlpry4TD4Q7kNvgH-eCzq&_nc_oc=Adi6UPF17ei89hghmbW4U3ZryoqTuvI_siSYrcsmkRPCZwujQz1BAIU2U3uDa8sDpg4&_nc_zt=23&_nc_ht=scontent.fdac5-2.fna&_nc_gid=AhFShLcf5JpJKGeQ6PhoEDR&oh=00_AYDaNzY1AL87BtLKucQgNnG4kLFYuV1y1fWzdHCPbeBSKQ&oe=67CB8660"
+                        alt="">
+                </div>
+            </div>
+            <div class="single-logo-carousel-wrapper">
+                <div class="single-logo-carousel">
+                    <img src="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/440351991_2587567841424416_5401589483983859625_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeGeaZE8eznjoAMDtLPneDE-ii4VBCOheaaKLhUEI6F5pqJcLuaaWUzUKySqPyknr7Yn5d8NFXv1okTFTSn3bilH&_nc_ohc=dojnqzWhZUEQ7kNvgGzVbcz&_nc_oc=Adg1yZ0I-LfYDNLrHSEhw0RLndjzxXt0aXW3w3qM7aB5JLqlTUj2NVsAwWvkOb_ZSN8&_nc_zt=23&_nc_ht=scontent.fdac5-2.fna&_nc_gid=AC-p5qFBol4xBY0P-HFLh77&oh=00_AYBh6SGP26tWgLf8CBsju00IVB5wx_gnVwCEUfULvIcyAA&oe=67CB96CA"
+                        alt="">
+                </div>
+            </div>
         </div>
     </div>
 
