--- a/assets/html/hoqshopmenu/16.html
+++ b/assets/html/hoqshopmenu/16.html
@@ -76,7 +76,7 @@
         <div class="logo-carousel">
             <div class="single-logo-carousel-wrapper">
                 <div class="single-logo-carousel">
-                    <img src="https://scontent.fdac5-1.fna.fbcdn.net/v/t1.6435-9/119137358_3718642788164514_8623063901198792879_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeE4mf5qB8YB456mAvRp3oHJxCw0OTI_3O7ELDQ5Mj_c7n5axhFGlqmgFs4IPQMz7IjKYPbWuXNwmd4FGIUqCw_m&_nc_ohc=mR16guHUFn4Q7kNvgHe4FeT&_nc_oc=Adh7BwldU_g_Ta1zUrhKPywHT-VbSYvdfkMRsiXyA381LNAsxqb6CLaaJUCIhVwyYEk&_nc_zt=23&_nc_ht=scontent.fdac5-1.fna&_nc_gid=A7DNXj1x0TvXmw1SkgFuXtp&oh=00_AYDkeoGOc4ROj3Ki6K6V0AU1Gv09rTJ0KTm9TyEi-Lytng&oe=67ED4867"
+                    <img src="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/481914258_514370941702870_5191899635798978145_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFcJH-ILKP2tOcNv_Y9CLGbR5eyBrgxP2BHl7IGuDE_YC6GyiGfx5xLamfsLFliARd8d_k3AVMvVtG0BxAkx249&_nc_ohc=VEyObHQbBysQ7kNvgHwHkq4&_nc_oc=Adhxpsb7PxqUodwvTtsXhS1cYq24LLNsMfe5B5J6LW4T3alQugH_yxmzpdBOIISvgpk&_nc_zt=23&_nc_ht=scontent.fdac5-2.fna&_nc_gid=Aq0X4WYqPzOutqw70YWr-t2&oh=00_AYDOzU4QdINHqpNPRpmRjPfEO1XCQ1DZ7lN363ybMx7oQA&oe=67CB8BAF"
                         alt="">
                 </div>
             </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="single-logo-carousel-wrapper">
                 <div class="single-logo-carousel">
-                    <img src="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/440351991_2587567841424416_5401589483983859625_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeGeaZE8eznjoAMDtLPneDE-ii4VBCOheaaKLhUEI6F5pqJcLuaaWUzUKySqPyknr7Yn5d8NFXv1okTFTSn3bilH&_nc_ohc=dojnqzWhZUEQ7kNvgGzVbcz&_nc_oc=Adg1yZ0I-LfYDNLrHSEhw0RLndjzxXt0aXW3w3qM7aB5JLqlTUj2NVsAwWvkOb_ZSN8&_nc_zt=23&_nc_ht=scontent.fdac5-2.fna&_nc_gid=AC-p5qFBol4xBY0P-HFLh77&oh=00_AYBh6SGP26tWgLf8CBsju00IVB5wx_gnVwCEUfULvIcyAA&oe=67CB96CA"
+                    <img src="https://scontent.fdac5-2.fna.fbcdn.net/v/t39.30808-6/477052361_500852496388048_8552054174623882478_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeES2u1JtA83S7kmQFDMevecgPRQyDF8YlKA9FDIMXxiUpsEG2xcJn__X3HR_KfX6eTlztTk69PQmIrD00AK8H-8&_nc_ohc=6einGFF1ODkQ7kNvgHRpLnP&_nc_oc=AdgL0bhyST66HzOzsX_EuX0GKDGaaesaGkveIA6FPHx6p8B27Xmg4LKyd71RrLcVx4w&_nc_zt=23&_nc_ht=scontent.fdac5-2.fna&_nc_gid=AQH8CN6veAYSEqY3KDz-rvL&oh=00_AYC6rFeai6DGtlsjF1DSINVWx2DcyAvHTU4mITxxYc5DFw&oe=67CB889D"
                         alt="">
                 </div>
             </div>
